# searchMCP

./: .gitignore  README.md  build.cmd  build.sh  pyproject.toml  requirements.txt  searchmcp.spec
searchmcp/: cache.py  hybrid.py  models.py  server.py
searchmcp/providers/: __init__.py  duckduckgo.py
