[project]
name = "searchmcp"
version = "1.0.0"
description = "Servidor MCP para búsqueda web con caché permanente usando DuckDuckGo"
requires-python = ">=3.9"
dependencies = [
    "mcp>=1.0.0",
    "ddgs>=3.0.0",
    "beautifulsoup4>=4.12.0",
    "httpx>=0.27.0",
    "lxml>=5.0.0",
]

[project.scripts]
searchmcp = "searchmcp.server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["searchmcp*"]